tests/parse/parse.exp
Error ------------------------------------------------------- fail-flow-2.js:4:1

Error: fail-flow-2.js:4
  4: .
     ^ Unexpected token .

Error --------------------------------------------------------- fail-flow.js:3:1

Error: fail-flow.js:3
  3: .
     ^ Unexpected token .

Error -------------------------------------------------------------- fail.js:1:1

Error: fail.js:1
  1: .
     ^ Unexpected token .

Error --------------------------------------------------- no_parse_error.js:6:13

Error: no_parse_error.js:6
  6: var y = 5 / x;
                 ^ Cannot perform arithmetic operation because string [1] is not a number.
  References:
    5: var x = 'Test';
               ^^^^^^ [1]: string


Found 4 errors
